More refinments to the allen atlas creation/registration

--- a/src/atlas/notebooks/landmark-registration-analytical.ipynb
+++ b/src/atlas/notebooks/landmark-registration-analytical.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/eddyod/programming/preprocessing-pipeline/src\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "from pathlib import Path\n",
@@ -35,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,14 +74,14 @@
     "fixed_coms = brain.fixed_brain.get_coms(annotator_id=1)\n",
     "common_keys = fixed_coms.keys() & moving_coms.keys()\n",
     "brain_regions = sorted(moving_coms.keys())\n",
-    "common_keys = ['IC','PBG_L','PBG_R','3N_L','3N_R','4N_L','4N_R','SNR_L','SNR_R','VLL_L','VLL_R']\n",
+    "common_keys = ['SC','IC','PBG_L','PBG_R','3N_L','3N_R','4N_L','4N_R','SNR_L','SNR_R','VLL_L','VLL_R']\n",
     "fixed_points = np.array([fixed_coms[s] for s in brain_regions if s in common_keys])\n",
     "moving_points = np.array([moving_coms[s] for s in brain_regions if s in common_keys])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,57 +91,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'3N_L': [9103.0, 3794.25, 5500.0],\n",
-       " '3N_R': [9103.0, 3794.25, 5875.0],\n",
-       " '4N_L': [9587.75, 3776.25, 5450.0],\n",
-       " '4N_R': [9587.75, 3776.25, 5950.0],\n",
-       " 'IC': [10402.5, 2332.25, 5692.0],\n",
-       " 'PBG_L': [9401.75, 3845.25, 3575.0],\n",
-       " 'PBG_R': [9401.75, 3845.25, 7825.0],\n",
-       " 'SNR_L': [8440.53, 5167.26, 4250.0],\n",
-       " 'SNR_R': [8440.53, 5167.26, 7225.0],\n",
-       " 'VLL_L': [9464.75, 5174.75, 4200.0],\n",
-       " 'VLL_R': [9464.75, 5174.75, 7400.0]}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fixed_point_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "IC COM=[418.  88. 226.] distance=147.4\n",
-      "PBG_L COM=[380. 146. 144.] distance=218.28\n",
-      "PBG_R COM=[378. 146. 315.] distance=211.59\n",
-      "3N_L COM=[361. 154. 225.] distance=148.61\n",
-      "3N_R COM=[362. 155. 236.] distance=87.61\n",
-      "4N_L COM=[383. 154. 217.] distance=77.27\n",
-      "4N_R COM=[382. 155. 240.] distance=104.77\n",
-      "SNR_L COM=[342. 197. 169.] distance=265.15\n",
-      "SNR_R COM=[339. 194. 296.] distance=350.74\n",
-      "VLL_L COM=[381. 184. 150.] distance=720.4\n",
-      "VLL_R COM=[379. 187. 307.] distance=570.64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "distances = []\n",
     "for structure in common_keys:\n",
@@ -168,17 +121,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#IC COM=[420. 101. 231.] distance=235.02\n",
-    "#PBG_L COM=[380. 150. 151.] distance=239.76\n",
-    "#PBG_R COM=[375. 153. 311.] distance=57.22\n",
-    "#3N_L COM=[361. 157. 226.] distance=220.24\n",
-    "#3N_R COM=[361. 158. 237.] distance=185.78\n",
-    "#4N_L COM=[381. 159. 219.] distance=203.86\n",
-    "#4N_R COM=[380. 160. 241.] distance=244.41\n",
-    "#SNR_L COM=[339. 196. 173.] distance=287.68\n",
-    "#SNR_R COM=[333. 195. 291.] distance=309.48\n",
-    "#VLL_L COM=[376. 189. 157.] distance=522.31\n",
-    "#VLL_R COM=[370. 195. 301.] distance=386.75"
+    "\"\"\"\n",
+    "SC COM=[357.  93. 229.] distance=309.4\n",
+    "IC COM=[407.  78. 224.] distance=290.55\n",
+    "PBG_L COM=[383. 136. 143.] distance=464.15\n",
+    "PBG_R COM=[382. 141. 311.] distance=357.12\n",
+    "3N_L COM=[368. 152. 223.] distance=100.88\n",
+    "3N_R COM=[368. 154. 234.] distance=106.66\n",
+    "4N_L COM=[386. 149. 215.] distance=95.34\n",
+    "4N_R COM=[386. 151. 237.] distance=64.32\n",
+    "SNR_L COM=[357. 193. 165.] distance=597.31\n",
+    "SNR_R COM=[355. 193. 294.] distance=559.41\n",
+    "VLL_L COM=[392. 172. 148.] distance=944.63\n",
+    "VLL_R COM=[391. 181. 303.] distance=721.04\n",
+    "\n",
+    "SC COM=[356.  92. 229.] distance=327.88\n",
+    "IC COM=[406.  77. 225.] distance=316.61\n",
+    "PBG_L COM=[382. 135. 143.] distance=479.08\n",
+    "PBG_R COM=[381. 141. 312.] distance=356.87\n",
+    "3N_L COM=[366. 152. 223.] distance=82.6\n",
+    "3N_R COM=[367. 153. 234.] distance=74.17\n",
+    "4N_L COM=[385. 148. 216.] distance=83.52\n",
+    "4N_R COM=[385. 150. 238.] distance=42.41\n",
+    "SNR_L COM=[356. 193. 166.] distance=589.6\n",
+    "SNR_R COM=[354. 192. 294.] distance=546.13\n",
+    "VLL_L COM=[390. 172. 149.] distance=934.07\n",
+    "VLL_R COM=[390. 180. 303.] distance=730.59\n",
+    "\n",
+    "SC COM=[364.  90. 230.] distance=153.14\n",
+    "IC COM=[416.  86. 226.] distance=57.8\n",
+    "PBG_L COM=[378. 144. 141.] distance=241.66\n",
+    "PBG_R COM=[376. 147. 316.] distance=192.25\n",
+    "3N_L COM=[362. 153. 224.] distance=105.12\n",
+    "3N_R COM=[363. 154. 235.] distance=60.78\n",
+    "4N_L COM=[382. 153. 216.] distance=76.64\n",
+    "4N_R COM=[380. 154. 239.] distance=117.63\n",
+    "SNR_L COM=[341. 195. 165.] distance=322.87\n",
+    "SNR_R COM=[338. 195. 296.] distance=307.14\n",
+    "VLL_L COM=[382. 179. 148.] distance=722.29\n",
+    "VLL_R COM=[377. 187. 307.] distance=516.72\n",
+    "\"\"\""
    ]
   },
   {
