More cleaning and updating of atlas creation process

--- a/src/atlas/notebooks/landmark-registration-analytical.ipynb
+++ b/src/atlas/notebooks/landmark-registration-analytical.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/eddyod/programming/preprocessing-pipeline/src\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "from pathlib import Path\n",
@@ -16,7 +24,7 @@
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "import numpy as np\n",
-    "\n",
+    "from superpose3d import Superpose3D\n",
     "PIPELINE_ROOT = Path('../src').resolve().parent.parent\n",
     "sys.path.append(PIPELINE_ROOT.as_posix())\n",
     "print(PIPELINE_ROOT)\n",
@@ -27,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,46 +61,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "animal = 'Atlas'\n",
+    "animal = 'DK55'\n",
     "brain = BrainStructureManager(animal)\n",
     "brain.fixed_brain = BrainStructureManager('Allen')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "atlas_coms = brain.get_coms(annotator_id=1)\n",
+    "moving_coms = brain.get_coms(annotator_id=2)\n",
     "allen_coms = brain.fixed_brain.get_coms(annotator_id=1)\n",
-    "common_keys = allen_coms.keys() & atlas_coms.keys()\n",
-    "brain_regions = sorted(atlas_coms.keys())\n",
-    "allen_points = np.array([allen_coms[s] for s in brain_regions if s in brain.midbrain_keys])\n",
-    "atlas_points = np.array([atlas_coms[s] for s in brain_regions if s in brain.midbrain_keys])"
+    "common_keys = allen_coms.keys() & moving_coms.keys()\n",
+    "brain_regions = sorted(moving_coms.keys())\n",
+    "allen_points = np.array([allen_coms[s] for s in brain_regions if s in common_keys])\n",
+    "moving_points = np.array([moving_coms[s] for s in brain_regions if s in common_keys])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "allen_point_dict = {s:allen_coms[s] for s in brain_regions if s in common_keys}\n",
-    "atlas_point_dict = {s:atlas_coms[s] for s in brain_regions if s in common_keys}"
+    "moving_point_dict = {s:moving_coms[s] for s in brain_regions if s in common_keys}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'3N_L': [11207.5, 5005.76, 4620.0],\n",
+       " '3N_R': [11172.8, 4960.67, 4900.0],\n",
+       " '4N_L': [11525.2, 5043.96, 4460.0],\n",
+       " '4N_R': [11474.0, 4986.83, 4940.0],\n",
+       " '5N_L': [12184.6, 6245.08, 3400.0],\n",
+       " '5N_R': [12198.9, 6011.09, 6320.0],\n",
+       " '6N_L': [12747.7, 6215.66, 4500.0],\n",
+       " '6N_R': [12691.9, 6174.66, 5240.0],\n",
+       " '7N_L': [13080.7, 7323.6, 3660.0],\n",
+       " '7N_R': [12927.3, 7183.8, 6300.0],\n",
+       " '7n_L': [12650.95, 6181.5, 4020.0],\n",
+       " 'AP': [14439.6, 5705.57, 4920.0],\n",
+       " 'Amb_L': [13717.5, 7135.54, 3660.0],\n",
+       " 'Amb_R': [13785.2, 6869.11, 6340.0],\n",
+       " 'DC_L': [13327.7, 5646.89, 2660.0],\n",
+       " 'DC_R': [13334.3, 5283.99, 7080.0],\n",
+       " 'LC_L': [12584.0, 5309.77, 3960.0],\n",
+       " 'LC_R': [12679.9, 5218.19, 5680.0],\n",
+       " 'LRt_L': [14545.3, 7358.92, 3680.0],\n",
+       " 'LRt_R': [14848.1, 7225.04, 6280.0],\n",
+       " 'PBG_L': [11314.1, 5133.68, 2860.0],\n",
+       " 'PBG_R': [11309.0, 4916.5, 6740.0]}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "atlas_coms['SC']"
+    "moving_point_dict"
    ]
   },
   {
@@ -106,22 +146,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n=22, min=2018.2507510465596 max=2614.012388589618, mean=2339.176779799585\n",
+      "Amb_L distance from Allen=2018.25 micrometers\n",
+      "Amb_R distance from Allen=2051.76 micrometers\n",
+      "AP distance from Allen=2066.51 micrometers\n",
+      "7n_L distance from Allen=2194.52 micrometers\n",
+      "DC_L distance from Allen=2229.95 micrometers\n",
+      "7N_R distance from Allen=2242.01 micrometers\n",
+      "LC_L distance from Allen=2274.63 micrometers\n",
+      "6N_R distance from Allen=2310.7 micrometers\n",
+      "5N_L distance from Allen=2315.92 micrometers\n",
+      "LRt_L distance from Allen=2342.58 micrometers\n",
+      "5N_R distance from Allen=2344.08 micrometers\n",
+      "DC_R distance from Allen=2344.28 micrometers\n",
+      "6N_L distance from Allen=2352.38 micrometers\n",
+      "LC_R distance from Allen=2389.35 micrometers\n",
+      "7N_L distance from Allen=2393.08 micrometers\n",
+      "PBG_L distance from Allen=2406.82 micrometers\n",
+      "PBG_R distance from Allen=2445.87 micrometers\n",
+      "4N_R distance from Allen=2461.0 micrometers\n",
+      "4N_L distance from Allen=2509.84 micrometers\n",
+      "3N_R distance from Allen=2563.92 micrometers\n",
+      "3N_L distance from Allen=2590.43 micrometers\n",
+      "LRt_R distance from Allen=2614.01 micrometers\n"
+     ]
+    }
+   ],
    "source": [
     "distances = []\n",
-    "for structure in brain.midbrain_keys:\n",
+    "sortme = {}\n",
+    "for structure in common_keys:\n",
     "    (x,y,z) = allen_point_dict[structure]\n",
     "    allen_point = np.array([x,y,z])    \n",
-    "    atlas_point = np.array(atlas_point_dict[structure])\n",
+    "    moving_point = np.array(moving_point_dict[structure])\n",
     "    #print(atlas_point, allen_point)\n",
-    "    d = calculate_distance(allen_point, atlas_point)\n",
+    "    d = calculate_distance(allen_point, moving_point)\n",
     "    distances.append(d)\n",
-    "    atlas_point = np.round(atlas_point/25)\n",
-    "    print(f'{structure} Cdistance from Allen={round(d,2)} micrometers')\n",
-    "print()\n",
-    "print(f'n={len(distances)}, min={min(distances)} max={max(distances)}, mean={np.mean(distances)}')"
+    "    sortme[structure] = d\n",
+    "print(f'n={len(distances)}, min={min(distances)} max={max(distances)}, mean={np.mean(distances)}')\n",
+    "ds = {k: v for k, v in sorted(sortme.items(), key=lambda item: item[1])}\n",
+    "for structure, d in ds.items():\n",
+    "    print(f'{structure} distance from Allen={round(d,2)} micrometers')"
    ]
   },
   {
@@ -138,36 +210,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "221.02443674967975\n"
+     ]
+    }
+   ],
    "source": [
-    "r, t = umeyama(atlas_points.T, allen_points.T)"
+    "(RMSD, _, _, _) = Superpose3D(allen_points, moving_points, allow_rescale=True)\n",
+    "print(RMSD)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "t"
+    "R, t = umeyama(moving_points.T, allen_points.T)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.07762522 -0.19058936 -0.00973869]\n",
+      " [ 0.19077436  1.07442001  0.08319884]\n",
+      " [-0.00492819 -0.08362178  1.0911821 ]]\n",
+      "[[-1811.87371515]\n",
+      " [-4065.73917681]\n",
+      " [  940.3294948 ]]\n"
+     ]
+    }
+   ],
    "source": [
-    "reg_points = r @ atlas_points.T + t"
+    "print(R)\n",
+    "print(t)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "reg_points = R @ moving_points.T + t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean\n",
+      "[10707.85727273  5166.11227273  5647.64363636]\n",
+      "[10707.85727273  5166.11227273  5647.64363636]\n",
+      "Min\n",
+      "[9102.49 3774.79 3229.  ]\n",
+      "[9235.04689181 3803.26206037 3304.9894971 ]\n",
+      "Max\n",
+      "[12653.24  6990.91  8156.39]\n",
+      "[12750.63866088  7052.11391658  8158.3281967 ]\n"
+     ]
+    }
+   ],
    "source": [
     "print('Mean')\n",
     "print(np.mean(allen_points, axis=0))\n",
@@ -182,31 +302,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg_point_dict = {s:atlas_coms[s] for s in brain_regions if s in brain.midbrain_keys}"
+    "reg_point_dict = {s:moving_coms[s] for s in brain_regions if s in common_keys}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n=22, min=38.11424881491477 max=429.1977924102672, mean=200.18559492616384\n",
+      "PBG_L distance from Allen=38.11 micrometers\n",
+      "5N_R distance from Allen=79.9 micrometers\n",
+      "PBG_R distance from Allen=93.17 micrometers\n",
+      "LC_L distance from Allen=94.98 micrometers\n",
+      "5N_L distance from Allen=106.56 micrometers\n",
+      "3N_R distance from Allen=140.14 micrometers\n",
+      "4N_R distance from Allen=154.89 micrometers\n",
+      "LRt_L distance from Allen=162.58 micrometers\n",
+      "3N_L distance from Allen=169.57 micrometers\n",
+      "4N_L distance from Allen=179.51 micrometers\n",
+      "LC_R distance from Allen=179.99 micrometers\n",
+      "7n_L distance from Allen=184.27 micrometers\n",
+      "7N_L distance from Allen=191.43 micrometers\n",
+      "6N_L distance from Allen=218.37 micrometers\n",
+      "AP distance from Allen=232.01 micrometers\n",
+      "7N_R distance from Allen=235.61 micrometers\n",
+      "6N_R distance from Allen=250.51 micrometers\n",
+      "Amb_R distance from Allen=297.62 micrometers\n",
+      "DC_L distance from Allen=305.75 micrometers\n",
+      "Amb_L distance from Allen=327.21 micrometers\n",
+      "DC_R distance from Allen=332.7 micrometers\n",
+      "LRt_R distance from Allen=429.2 micrometers\n"
+     ]
+    }
+   ],
    "source": [
     "distances = []\n",
+    "sortme = {}\n",
     "for structure in common_keys:\n",
     "    (x,y,z) = allen_point_dict[structure]\n",
     "    allen_point = np.array([x,y,z])    \n",
-    "    atlas_point = np.array(atlas_point_dict[structure])\n",
-    "    reg_point = brain_to_atlas_transform(atlas_point, r, t)\n",
+    "    moving_point = np.array(moving_point_dict[structure])\n",
+    "    reg_point = brain_to_atlas_transform(moving_point, R, t)\n",
     "    d = calculate_distance(allen_point, reg_point)\n",
     "    distances.append(d)\n",
-    "    reg_point = np.round(reg_point / 25)\n",
-    "    print(f'{structure} COM={reg_point} distance={round(d,2)}')\n",
-    "print()\n",
-    "len(distances), round(np.mean(distances)), round(min(distances)), round(max(distances))"
+    "    #print(f'{structure} COM={reg_point} distance={round(d,2)}')\n",
+    "    sortme[structure] = d\n",
+    "\n",
+    "print(f'n={len(distances)}, min={min(distances)} max={max(distances)}, mean={np.mean(distances)}')\n",
+    "ds = {k: v for k, v in sorted(sortme.items(), key=lambda item: item[1])}\n",
+    "for structure, d in ds.items():\n",
+    "    print(f'{structure} distance from Allen={round(d,2)} micrometers')"
    ]
   },
   {
@@ -215,55 +369,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "add trans in loop from MD -> MD589\n",
-    "Pn_R COM=[385. 239. 255.] distance=628.58\n",
-    "SNR_L COM=[364. 192. 172.] distance=807.9\n",
-    "PBG_R COM=[379. 147. 310.] distance=208.75\n",
-    "Pn_L COM=[382. 237. 207.] distance=745.91\n",
-    "4N_R COM=[387. 151. 238.] distance=95.07\n",
-    "3N_L COM=[366. 153. 225.] distance=125.3\n",
-    "PBG_L COM=[381. 147. 149.] distance=278.35\n",
-    "3N_R COM=[375. 151. 239.] distance=305.8\n",
-    "SNR_R COM=[350. 198. 289.] distance=403.99\n",
-    "SC COM=[365.  94. 230.] distance=790.67\n",
-    "IC COM=[415.  80. 226.] distance=134.63\n",
-    "4N_L COM=[346. 129. 189.] distance=1299.23\n",
-    "\n",
-    "(12, 485, 95, 1299)\n",
-    "\n",
-    "add trans in loop from MD -> allen\n",
-    "SNR_L COM=[361. 194. 164.] distance=653.93\n",
-    "3N_R COM=[369. 152. 234.] distance=116.48\n",
-    "4N_R COM=[379. 149. 237.] distance=132.96\n",
-    "Pn_R COM=[385. 243. 253.] distance=724.89\n",
-    "IC COM=[409.  77. 224.] distance=284.73\n",
-    "SNR_R COM=[352. 194. 295.] distance=493.45\n",
-    "SC COM=[365.  90. 230.] distance=689.5\n",
-    "3N_L COM=[362. 151. 224.] distance=101.12\n",
-    "PBG_R COM=[376. 141. 313.] distance=309.93\n",
-    "Pn_L COM=[382. 241. 203.] distance=736.1\n",
-    "PBG_L COM=[376. 138. 141.] distance=392.79\n",
-    "4N_L COM=[379. 147. 215.] distance=164.75\n",
-    "\n",
-    "(12, 400, 101, 736)\n",
-    "\n",
-    "only transformation is on this page\n",
-    "4N_R COM=[350. 132. 213.] distance=1151.52\n",
-    "Pn_R COM=[384. 237. 257.] distance=565.89\n",
-    "3N_L COM=[369. 155. 229.] distance=250.5\n",
-    "SC COM=[370. 101. 234.] distance=988.87\n",
-    "PBG_R COM=[384. 151. 310.] distance=222.8\n",
-    "Pn_L COM=[382. 236. 209.] distance=773.35\n",
-    "PBG_L COM=[384. 146. 155.] distance=418.68\n",
-    "IC COM=[419.  86. 227.] distance=94.65\n",
-    "4N_L COM=[351. 130. 193.] distance=1140.79\n",
-    "SNR_R COM=[356. 199. 291.] distance=512.06\n",
-    "SNR_L COM=[370. 192. 176.] distance=955.02\n",
-    "3N_R COM=[376. 154. 239.] distance=326.34\n",
-    "\n",
-    "(12, 617, 95, 1152)\n",
-    "\"\"\""
+    "# superpose, allow_rescale=False 34 279 105 613\n",
+    "# superpoase with scaling 34 271 74 621\n",
+    "# umeyama with scaling 34 271 74 621"
    ]
   },
   {
@@ -281,7 +389,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
