Moved lots of the notebooks into better locations and created a dir under docs for the allen comparision

--- a/src/registration/notebooks/find_allen_regions.ipynb
+++ b/src/registration/notebooks/find_allen_regions.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,9 +68,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Type of annotated volume <class 'allensdk.core.reference_space.ReferenceSpace'>\n",
+      "Shape of annotated volume: (528, 320, 456)\n",
+      "Annotated volume data type: uint32\n"
+     ]
+    }
+   ],
    "source": [
     "print('Type of annotated volume', type(rsp))\n",
     "print('Shape of annotated volume:',rsp.annotation.shape)\n",
@@ -545,7 +555,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
