--- a/src/atlas/notebooks/allen.atlas.comparison.ipynb
+++ b/src/atlas/notebooks/allen.atlas.comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,12 +88,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<tr><td>Sp5O_L</td> <td>97.11</td></tr>\n",
+      "<tr><td>Sp5O_R</td> <td>132.01</td></tr>\n",
+      "<tr><td>DC_L</td> <td>134.63</td></tr>\n",
+      "<tr><td>6N_L</td> <td>138.32</td></tr>\n",
+      "<tr><td>5N_R</td> <td>149.65</td></tr>\n",
+      "<tr><td>VLL_R</td> <td>151.83</td></tr>\n",
+      "<tr><td>LRt_L</td> <td>167.32</td></tr>\n",
+      "<tr><td>5N_L</td> <td>189.11</td></tr>\n",
+      "<tr><td>6N_R</td> <td>204.79</td></tr>\n",
+      "<tr><td>DC_R</td> <td>219.04</td></tr>\n",
+      "<tr><td>7n_R</td> <td>228.57</td></tr>\n",
+      "<tr><td>SNC_R</td> <td>261.94</td></tr>\n",
+      "<tr><td>SNC_L</td> <td>274.29</td></tr>\n",
+      "<tr><td>7n_L</td> <td>276.58</td></tr>\n",
+      "<tr><td>LRt_R</td> <td>312.05</td></tr>\n",
+      "<tr><td>Sp5I_R</td> <td>320.7</td></tr>\n",
+      "<tr><td>Amb_L</td> <td>323.08</td></tr>\n",
+      "<tr><td>Sp5I_L</td> <td>330.99</td></tr>\n",
+      "<tr><td>VLL_L</td> <td>335.02</td></tr>\n",
+      "<tr><td>7N_L</td> <td>363.45</td></tr>\n",
+      "<tr><td>LC_L</td> <td>398.66</td></tr>\n",
+      "<tr><td>RtTg</td> <td>401.44</td></tr>\n",
+      "<tr><td>Amb_R</td> <td>407.88</td></tr>\n",
+      "<tr><td>LC_R</td> <td>420.65</td></tr>\n",
+      "<tr><td>Sp5C_L</td> <td>491.23</td></tr>\n",
+      "<tr><td>7N_R</td> <td>531.4</td></tr>\n",
+      "<tr><td>AP</td> <td>576.44</td></tr>\n"
+     ]
+    }
+   ],
    "source": [
     "for i, row in df_brainstem_distance.iterrows():\n",
-    "    print(f'<tr><td>{row[0]}</td> <td>{round(row[1]),2}</td></tr>')"
+    "    print(f'<tr><td>{row[0]}</td> <td>{round(row[1],2)}</td></tr>')"
    ]
   },
   {
