Updated the allen atlas comparisons

--- a/src/registration/notebooks/point-based-registration-test.ipynb
+++ b/src/registration/notebooks/point-based-registration-test.ipynb
@@ -155,90 +155,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
     "DATA = '/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration'\n",
-    "MD585_volumepath = os.path.join(DATA, 'MD585_sagittal.tif')\n",
-    "MD589_volumepath = os.path.join(DATA, 'MD589_14um_sagittal.tif')\n",
-    "MD594_volumepath = os.path.join(DATA, 'MD594_sagittal.tif')"
+    "MD585_volumepath = os.path.join(DATA, 'MD585_MD589.tif')\n",
+    "MD589_volumepath = os.path.join(DATA, 'MD589_25um_sagittal.tif')\n",
+    "MD594_volumepath = os.path.join(DATA, 'MD594_MD589.tif')\n",
+    "population = [MD585_volumepath, MD589_volumepath, MD594_volumepath]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
     "MD585_volume = io.imread(MD585_volumepath)\n",
     "MD589_volume = io.imread(MD589_volumepath)\n",
     "MD594_volume = io.imread(MD594_volumepath)\n",
-    "volumes = [MD585_volume, MD589_volume, MD594_volume]"
+    "volumes = [MD585_volume, MD589_volume.astype(np.float32), MD594_volume]\n",
+    "volumes2 = [MD585_volume, MD594_volume]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dtype('float32')"
+       "(dtype('float32'), dtype('uint8'), dtype('float32'))"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "MD585_volume.dtype"
+    "MD585_volume.dtype, MD589_volume.dtype, MD594_volume.dtype"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 153,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "post max=803.9765625 mean=79.67485046386719\n"
+     ]
+    }
+   ],
    "source": [
-    "#margin = 0\n",
-    "#sizes = np.array([vi.shape for vi in volumes])\n",
-    "#volume_size = sizes.max(0) + margin\n",
-    "#volumes = [normalize8(v) for v in volumes]\n",
-    "#volumes = [pad_volume(volume_size, vi) for vi in volumes]\n",
-    "#volumes = list([(v > 0).astype(np.int32) for v in volumes])\n",
-    "#for v in volumes:\n",
-    "#    print(v.dtype, v.shape)\n",
-    "\n",
     "merged_volume = np.sum(volumes, axis=0)\n",
-    "merged_volume = merged_volume / float(np.max(merged_volume))\n",
-    "#merged_volume_prob = merged_volume / 3\n",
-    "# increasing the STD makes the volume smoother\n",
-    "# Smooth the probability\n",
-    "#average_volume = gaussian(merged_volume_prob, 1.0)\n",
-    "#color = 255\n",
-    "#average_volume[average_volume > 0.8] = color\n",
-    "#average_volume[average_volume != color] = 0\n",
-    "#average_volume = average_volume.astype(np.uint8)\n",
-    "arr = normalize8(merged_volume)\n",
-    "#ids, counts = np.unique(arr, return_counts=True)\n",
-    "#print(ids, counts)"
+    "print(f'post max={np.max(merged_volume)} mean={np.mean(merged_volume)}')\n",
+    "arr = normalize8(merged_volume)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(dtype('uint8'), (447, 253, 342))"
+       "(dtype('uint8'), (447, 253, 341))"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,12 +240,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
     "savepath = os.path.join(DATA, 'gauss.tif')\n",
     "io.imsave(savepath, arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/MD585_MD589.tif\n",
+      "/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/MD589_25um_sagittal.tif\n",
+      "/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/MD594_MD589.tif\n",
+      "ELASTIX version: 5.000\n",
+      "Command line options from ElastixBase:\n",
+      "-fMask    unspecified, so no fixed mask used\n",
+      "-mMask    unspecified, so no moving mask used\n",
+      "-out      ./\n",
+      "-threads  unspecified, so all available threads are used\n",
+      "WARNING: The parameter \"UseDirectionCosines\", requested at entry number 0, does not exist at all.\n",
+      "  The default value \"true\" is used instead.\n",
+      "\n",
+      "WARNING: The option \"UseDirectionCosines\" was not found in your parameter file.\n",
+      "  From elastix 4.8 it defaults to true!\n",
+      "This may change the behavior of your registrations considerably.\n",
+      "\n",
+      "Command line options from TransformBase:\n",
+      "-t0       unspecified, so no initial transform used\n",
+      "WARNING: The parameter \"BSplineTransformSplineOrder\", requested at entry number 0, does not exist at all.\n",
+      "  The default value \"3\" is used instead.\n",
+      "\n",
+      "Reading images...\n",
+      "Reading images took 0 ms.\n",
+      "\n",
+      "WARNING: the fixed pyramid schedule is not fully specified!\n",
+      "  A default pyramid schedule is used.\n",
+      "WARNING: the moving pyramid schedule is not fully specified!\n",
+      "  A default pyramid schedule is used.\n",
+      "Initialization of all components (before registration) took: 2 ms.\n",
+      "\n",
+      "itk::ExceptionObject (0x5580f97e75e0)\n",
+      "Location: \"ElastixTemplate - Run()\" \n",
+      "File: /src/SimpleElastix/build/ITK-prefix/include/ITK-5.1/itkRecursiveSeparableImageFilter.hxx\n",
+      "Line: 227\n",
+      "Description: itk::ERROR: RecursiveGaussianImageFilter(0x558102543700): The number of pixels along direction 3 is less than 4. This filter requires a minimum of four pixels along the dimension to be processed.\n",
+      "\n",
+      "Error occurred during actual registration.\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Exception thrown in SimpleITK ElastixImageFilter_Execute: /src/SimpleElastix/Code/Elastix/src/sitkElastixImageFilterImpl.cxx:259:\nsitk::ERROR: \nitk::ExceptionObject (0x5580f97e75e0)\nLocation: \"unknown\" \nFile: /src/SimpleElastix/build/Elastix/Core/Main/elxElastixFilter.hxx\nLine: 253\nDescription: itk::ERROR: ElastixFilter(0x5580ea6eaff0): Internal elastix error: See elastix log (use LogToConsoleOn() or LogToFileOn()).\n\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[163], line 15\u001b[0m\n\u001b[1;32m     13\u001b[0m elastixImageFilter\u001b[38;5;241m.\u001b[39mSetMovingImage(image)\n\u001b[1;32m     14\u001b[0m elastixImageFilter\u001b[38;5;241m.\u001b[39mSetParameterMap(sitk\u001b[38;5;241m.\u001b[39mGetDefaultParameterMap(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgroupwise\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m---> 15\u001b[0m \u001b[43melastixImageFilter\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mExecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/usr/local/share/pipeline/lib/python3.10/site-packages/SimpleITK/SimpleITK.py:11130\u001b[0m, in \u001b[0;36mElastixImageFilter.Execute\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m  11128\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mExecute\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m  11129\u001b[0m     \u001b[38;5;124;03m\"\"\"Execute(ElastixImageFilter self) -> Image\"\"\"\u001b[39;00m\n\u001b[0;32m> 11130\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_SimpleITK\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mElastixImageFilter_Execute\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Exception thrown in SimpleITK ElastixImageFilter_Execute: /src/SimpleElastix/Code/Elastix/src/sitkElastixImageFilterImpl.cxx:259:\nsitk::ERROR: \nitk::ExceptionObject (0x5580f97e75e0)\nLocation: \"unknown\" \nFile: /src/SimpleElastix/build/Elastix/Core/Main/elxElastixFilter.hxx\nLine: 253\nDescription: itk::ERROR: ElastixFilter(0x5580ea6eaff0): Internal elastix error: See elastix log (use LogToConsoleOn() or LogToFileOn()).\n\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Concatenate the ND images into one (N+1)D image\n",
+    "vectorOfImages = sitk.VectorOfImage()\n",
+    "\n",
+    "for filename in population:\n",
+    "    print(filename)\n",
+    "    vectorOfImages.push_back(sitk.ReadImage(filename, sitk.sitkFloat32))\n",
+    "\n",
+    "image = sitk.JoinSeries(vectorOfImages)\n",
+    "\n",
+    "# Register\n",
+    "elastixImageFilter = sitk.ElastixImageFilter()\n",
+    "elastixImageFilter.SetFixedImage(image)\n",
+    "elastixImageFilter.SetMovingImage(image)\n",
+    "elastixImageFilter.SetParameterMap(sitk.GetDefaultParameterMap('groupwise'))\n",
+    "elastixImageFilter.Execute()"
    ]
   }
  ],
