Removed comments in mask pipeline

--- a/src/atlas/notebooks/landmark-registration-analytical.ipynb
+++ b/src/atlas/notebooks/landmark-registration-analytical.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -17,23 +17,17 @@
     "import sys\n",
     "from pathlib import Path\n",
     "import numpy as np\n",
-    "from scipy.ndimage import center_of_mass\n",
-    "#import warnings\n",
-    "#warnings.filterwarnings(\"error\")\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "import numpy as np\n",
-    "from superpose3d import Superpose3D\n",
-    "\n",
     "\n",
     "PIPELINE_ROOT = Path('../src').resolve().parent.parent\n",
     "sys.path.append(PIPELINE_ROOT.as_posix())\n",
     "print(PIPELINE_ROOT)\n",
     "\n",
     "from library.registration.brain_structure_manager import BrainStructureManager\n",
-    "from library.registration.algorithm import umeyama\n",
-    "from registration.pointset_alignment import get_rigid_aligned_points, get_similarity_alignment_points"
+    "from library.registration.algorithm import umeyama"
    ]
   },
   {
@@ -82,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,58 +119,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reg_dict = get_similarity_alignment_points(allen_point_dict, moving_point_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(37, 3)"
+       "37"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "moving_points.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "brainstem_keys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "allen_point_dict['SC']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "moving_point_dict['SC']"
+    "len(allen_point_dict)"
    ]
   },
   {
@@ -235,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,29 +202,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ -8.78746122],\n",
-       "       [ 43.28687301],\n",
-       "       [-57.35439132]])"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,55 +260,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3N_L COM=[9054. 3980. 5623.] SITK=219.52 distance=216.77\n",
-      "3N_R COM=[9073. 4016. 5885.] SITK=228.6 distance=225.06\n",
-      "4N_L COM=[9578. 4030. 5447.] SITK=256.96 distance=252.76\n",
-      "4N_R COM=[9550. 4063. 5980.] SITK=295.14 distance=291.58\n",
-      "5N_L COM=[10161.  5211.  4201.] SITK=141.25 distance=136.76\n",
-      "5N_R COM=[10102.  5158.  7182.] SITK=194.94 distance=191.97\n",
-      "6N_L COM=[10775.  5319.  5259.] SITK=107.47 distance=108.67\n",
-      "6N_R COM=[10781.  5366.  6027.] SITK=165.42 distance=165.75\n",
-      "7N_L COM=[10780.  6479.  4476.] SITK=341.2 distance=334.35\n",
-      "7N_R COM=[11357.  6575.  7059.] SITK=541.68 distance=542.9\n",
-      "7n_L COM=[10538.  5651.  4538.] SITK=277.44 distance=281.11\n",
-      "7n_R COM=[10558.  5587.  6790.] SITK=198.84 distance=202.02\n",
-      "AP COM=[12708.  5525.  5518.] SITK=543.42 distance=545.88\n",
-      "Amb_L COM=[11660.  6408.  4292.] SITK=314.13 distance=307.78\n",
-      "Amb_R COM=[11678.  6238.  7012.] SITK=440.33 distance=433.63\n",
-      "DC_L COM=[11301.  4923.  3256.] SITK=90.89 distance=89.33\n",
-      "DC_R COM=[11072.  4778.  8146.] SITK=301.41 distance=300.35\n",
-      "IC COM=[10570.  2575.  5749.] SITK=318.92 distance=311.16\n",
-      "LC_L COM=[10575.  4612.  4755.] SITK=363.06 distance=360.81\n",
-      "LC_R COM=[10563.  4600.  6582.] SITK=362.66 distance=359.94\n",
-      "LRt_L COM=[12499.  6893.  4384.] SITK=180.45 distance=183.37\n",
-      "LRt_R COM=[12488.  6756.  6837.] SITK=320.12 distance=316.5\n",
-      "PBG_L COM=[9546. 3793. 3710.] SITK=226.82 distance=220.09\n",
-      "PBG_R COM=[9437. 3897. 7768.] SITK=100.46 distance=90.13\n",
-      "RtTg COM=[9226. 5688. 5603.] SITK=463.26 distance=467.89\n",
-      "SC COM=[9207. 2530. 5768.] SITK=184.4 distance=174.34\n",
-      "SNC_L COM=[8195. 4881. 4365.] SITK=295.2 distance=299.35\n",
-      "SNC_R COM=[8060. 4872. 7179.] SITK=388.2 distance=397.09\n",
-      "SNR_L COM=[8485. 4946. 4270.] SITK=332.43 distance=327.82\n",
-      "SNR_R COM=[8363. 4959. 7242.] SITK=248.8 distance=248.86\n",
-      "Sp5C_L COM=[13290.  6158.  4056.] SITK=521.99 distance=532.54\n",
-      "Sp5I_L COM=[12475.  5878.  3705.] SITK=362.55 distance=371.23\n",
-      "Sp5I_R COM=[12424.  5785.  7546.] SITK=337.16 distance=341.48\n",
-      "Sp5O_L COM=[11183.  5877.  3783.] SITK=56.23 distance=56.42\n",
-      "Sp5O_R COM=[11105.  5784.  7524.] SITK=158.59 distance=152.19\n",
-      "VLL_L COM=[9438. 4801. 3862.] SITK=375.06 distance=377.03\n",
-      "VLL_R COM=[9292. 4978. 7512.] SITK=257.8 distance=261.6\n",
-      "n=37, min=56.42309288277382 max=545.8822933606355, mean=283.14928294591755\n",
-      "n=37, min=56.230459010691945 max=543.4206595101243, mean=284.1294610705685\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "distances = []\n",
     "distances2 = []\n",
